# seird-model-exam

./: CMakeLists.txt  ConfigFile.txt  README.md  graph.C  graph.cpp  main.cpp  population.cpp  population.hpp  test.cpp
